fix newchatroom mobile bug z-index

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -69,7 +69,7 @@ body {
 #chat-input {
     position: fixed;
     bottom: 0;
-    z-index: 99px;
+/*    z-index: 99px;*/
     height: 3rem;
     background: white;
 }
